1- OTP confirm button bottom layout to include the new safe area

--- a/goSellSDK/Core/UI/Internal/Resources/Payment.storyboard
+++ b/goSellSDK/Core/UI/Internal/Resources/Payment.storyboard
@@ -163,14 +163,14 @@
                                                 <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bkw-B1-pmN" userLabel="Labels Container">
                                                     <rect key="frame" x="75" y="12.666666666666664" width="48" height="40"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V2d-AB-e4N">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V2d-AB-e4N">
                                                             <rect key="frame" x="0.0" y="0.0" width="48" height="16"/>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                             <color key="textColor" red="0.47058823529411764" green="0.47058823529411764" blue="0.47058823529411764" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EGI-aZ-2Dp">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EGI-aZ-2Dp">
                                                             <rect key="frame" x="0.0" y="16" width="48" height="24"/>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -1999,7 +1999,6 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstItem="zgA-Fa-sab" firstAttribute="top" secondItem="MfM-f5-uut" secondAttribute="bottom" constant="8" id="4IB-fQ-ZVF"/>
                                             <constraint firstItem="FQF-9b-cKO" firstAttribute="leading" secondItem="VSO-5s-c6Y" secondAttribute="leading" id="55A-eM-lp2"/>
                                             <constraint firstAttribute="trailing" secondItem="dhu-pf-vzq" secondAttribute="trailing" id="7qB-oC-cO5"/>
                                             <constraint firstAttribute="trailing" secondItem="MfM-f5-uut" secondAttribute="trailing" constant="8" id="B3k-Sl-yfz"/>
@@ -2009,6 +2008,7 @@
                                             <constraint firstItem="dhu-pf-vzq" firstAttribute="leading" secondItem="VSO-5s-c6Y" secondAttribute="leading" id="Vcm-pT-6Qa"/>
                                             <constraint firstItem="FQF-9b-cKO" firstAttribute="top" secondItem="VSO-5s-c6Y" secondAttribute="top" id="bJZ-4L-Qbb"/>
                                             <constraint firstItem="MfM-f5-uut" firstAttribute="leading" secondItem="VSO-5s-c6Y" secondAttribute="leading" constant="8" id="d1N-Cn-48r"/>
+                                            <constraint firstItem="oum-mw-XlO" firstAttribute="top" secondItem="MfM-f5-uut" secondAttribute="bottom" constant="50" id="e0P-oV-HzR"/>
                                             <constraint firstItem="oum-mw-XlO" firstAttribute="leading" secondItem="VSO-5s-c6Y" secondAttribute="leading" id="exC-gG-V9J"/>
                                             <constraint firstAttribute="bottom" secondItem="oum-mw-XlO" secondAttribute="bottom" id="ivq-3q-ehc"/>
                                             <constraint firstAttribute="bottom" secondItem="dhu-pf-vzq" secondAttribute="bottom" id="kbG-PF-hmM"/>
