--- a/goSellSDK/Core/UI/Internal/Resources/OTPInputView.xib
+++ b/goSellSDK/Core/UI/Internal/Resources/OTPInputView.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,6 +15,12 @@
                 <outletCollection property="otpLabels" destination="0cY-DZ-H16" collectionClass="NSMutableArray" id="eCy-iO-hWp"/>
                 <outletCollection property="otpLabels" destination="6mE-Yj-Qwb" collectionClass="NSMutableArray" id="sNZ-Fy-JGk"/>
                 <outletCollection property="otpLabels" destination="de6-lx-Av1" collectionClass="NSMutableArray" id="EVq-AF-Pf9"/>
+                <outletCollection property="otpDigitsView" destination="Pef-VL-6AP" collectionClass="NSMutableArray" id="MIe-On-ycT"/>
+                <outletCollection property="otpDigitsView" destination="wW3-7i-vIH" collectionClass="NSMutableArray" id="aw7-SH-3QH"/>
+                <outletCollection property="otpDigitsView" destination="9NS-G3-XzX" collectionClass="NSMutableArray" id="dVy-gL-nqq"/>
+                <outletCollection property="otpDigitsView" destination="tId-Wv-bQI" collectionClass="NSMutableArray" id="DZ7-Qb-Mvc"/>
+                <outletCollection property="otpDigitsView" destination="AiF-ZT-jBD" collectionClass="NSMutableArray" id="JrS-D9-TRK"/>
+                <outletCollection property="otpDigitsView" destination="nDp-bb-9Br" collectionClass="NSMutableArray" id="8Ki-cn-NDz"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -24,7 +28,7 @@
             <rect key="frame" x="0.0" y="0.0" width="295" height="52"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pef-VL-6AP">
+                <view tag="11" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pef-VL-6AP">
                     <rect key="frame" x="0.0" y="0.0" width="45" height="52"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T27-m8-cyR">
@@ -64,7 +68,7 @@
                     <rect key="frame" x="45" y="0.0" width="5" height="52"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wW3-7i-vIH">
+                <view tag="11" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wW3-7i-vIH">
                     <rect key="frame" x="50" y="0.0" width="45" height="52"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sK0-z0-dyw">
@@ -103,7 +107,7 @@
                     <rect key="frame" x="95" y="0.0" width="5" height="52"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9NS-G3-XzX">
+                <view tag="11" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9NS-G3-XzX">
                     <rect key="frame" x="100" y="0.0" width="45" height="52"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OjU-9z-4Hh">
@@ -142,7 +146,7 @@
                     <rect key="frame" x="145" y="0.0" width="5" height="52"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tId-Wv-bQI">
+                <view tag="11" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tId-Wv-bQI">
                     <rect key="frame" x="150" y="0.0" width="45" height="52"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cY-DZ-H16">
@@ -181,7 +185,7 @@
                     <rect key="frame" x="195" y="0.0" width="5" height="52"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AiF-ZT-jBD">
+                <view tag="11" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AiF-ZT-jBD">
                     <rect key="frame" x="200" y="0.0" width="45" height="52"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6mE-Yj-Qwb">
@@ -220,7 +224,7 @@
                     <rect key="frame" x="245" y="0.0" width="5" height="52"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nDp-bb-9Br">
+                <view tag="11" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nDp-bb-9Br">
                     <rect key="frame" x="250" y="0.0" width="45" height="52"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="de6-lx-Av1">
