--- a/goSellSDK/Core/UI/Internal/Resources/Payment.storyboard
+++ b/goSellSDK/Core/UI/Internal/Resources/Payment.storyboard
@@ -468,7 +468,7 @@
                                                                         <subviews>
                                                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yBe-WZ-geX">
                                                                                 <rect key="frame" x="12" y="0.0" width="18" height="18"/>
-                                                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" constant="18" id="4kG-aM-fKW"/>
                                                                                     <constraint firstAttribute="height" constant="18" id="dZW-gD-Fc9"/>
@@ -476,6 +476,7 @@
                                                                             </imageView>
                                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OB0-nP-6ta">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <connections>
                                                                                     <action selector="deleteCardButtonHighlighted:" destination="gmQ-fR-437" eventType="touchDragEnter" id="aDz-4r-AOE"/>
                                                                                     <action selector="deleteCardButtonHighlighted:" destination="gmQ-fR-437" eventType="touchDown" id="noR-5j-pU3"/>
